# PicoProjects

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  pico_am_radio.py
Web-iinteractive/: README.md  blank file  main.py  radio.py
creepy_halloween_sonar/: creepy_halloween_sonar.ino.bak
pico2w_lcd_soundboard/: LcdDriver.c  LcdDriver.h  SoundPresets.h  UiText.cpp  UiText.h  build.sh  pico2w_lcd_soundboard.ino
projects/creepy_halloween_sonar/: README.md  build.sh  creepy_halloween_sonar.ino
projects/kitchen_wall_clock/: README.md  build.sh  kitchen_wall_clock.ino
projects/kitchen_wall_clock/src/: config.h
projects/pico2w_lcd_soundboard/: README.md  build.sh  pico2w_lcd_soundboard.ino
projects/pico2w_lcd_soundboard/tools/preset_lab/: README.md  index.html  sync_presets.py
projects/pico_am_radio/: CMakeLists.txt  PicoAM.c  README.md  build.sh  squarewave.pio
projects/pico_lcd_generative_art/: CMakeLists.txt  GenerativeArt.c  README.md  build.sh
scripts/: build.sh  doctor.sh  flash_uf2.sh  helpers.sh  smoke.sh  verify.sh
shared/pico_display/: CMakeLists.txt  library.properties
shared/pico_display/src/: LcdDriver.c  LcdDriver.h  UiText.cpp  UiText.h
tools/preset_lab/: README.md  index.html  sync_presets.py
